--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="images/111.png" alt="geo_image" height="100"></td>
       <td>
-        <h1>Голубченко Александр</h1>
+        <h1>Александр</h1>
         <p><i><strong>Инженерные изыскания</strong>, геодезия, топография.</i></p>
       </td>
     </tr>
